# AutoView

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_ONBOARDING.html  CLAUDE.md  EVALUATION.md  README.md  SESSION-2026-06-11.md  pyproject.toml  sprint.md
.claude/: settings.json
api/: __init__.py  exceptions.py  main.py  schemas.py
api/routes/: admin_drafts.py  admin_upload.py  auth.py  candidates.py  hr.py  interviews.py  jobs.py  media.py
evals/: _test_db.py  test_api.py  test_assessor_calibration.py  test_assessor_integration.py  test_auth.py  test_auth_cookie.py  test_completion_policy.py  test_embeddings.py  test_evaluator_rag.py  test_evaluator_scoring.py  test_followup_budget.py  test_hr_api.py  test_ingestion.py  test_milvus_retry.py  test_orchestrator_stage.py  test_parse_resume.py  test_planner_rag.py  test_planner_track.py  test_rag_e2e.py  test_recordings.py  test_repository.py  test_resume_sections.py  test_review_stats.py  test_schema_extensions.py  test_seed_questions.py  test_skeleton.py  test_stt.py  test_topic_match.py  test_tts.py  test_vector_store.py
evals/data/: assessment_calibration.json
scripts/: cleanup_recordings.py  derive_questions.py  ingest_md_corpus.py  relabel_question_datasets.py  review_stats.py  seed_questions.py  seed_users.py
sim/: __init__.py  _env.py  calibrate_assessor.py  calibrate_judges.py  candidate.py  fairness.py  judge.py  judges.py  personas.py  rag_metrics.py  report.py  run_interviews.py  runner.py
src/: coverage.py  main.py  resume_parser.py
web/: .env.example  package-lock.json
(+71 files in other folders)
