[project]
name = "ai-interview"
version = "0.0.1"
description = "AI Interview Platform — 多 agent 面试基础设施"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1.18",
    "redis>=5.0.4",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.30.0",
    "pymilvus>=2.4.0",
    "milvus-lite>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
